ZumZumFinancials_Dev1/src/objects/Sub_Category__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nominal_Categories__c</fullName>
        <label>Nominal Categories</label>
        <referenceTo>Nominal_Categories__c</referenceTo>
        <relationshipLabel>Sub Category</relationshipLabel>
        <relationshipName>Sub_Category</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Range_From__c</fullName>
        <label>Range From</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_To__c</fullName>
        <label>Range To</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sub Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Nominal_Categories__c</columns>
        <columns>NAME</columns>
        <columns>Range_From__c</columns>
        <columns>Range_To__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sub Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>